# stm_cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  stm_cpp.jdebug
.github/workflows/: cmake-single-platform.yml
app/: main.cpp
app/startup/include/: vectors_llvm.h
app/startup/sources/: vectors.c
k_devices/: CMakeLists.txt
k_devices/include/: k_address.h  k_device_register.h  k_flash.h  k_gpio.h  k_rcc.h  k_register.h
k_devices/sources/: k_flash.cpp  k_gpio.cpp  k_rcc.cpp
k_devices/startup/include/: _llvm.h  stm32f031k6.h
k_devices/startup/sources/: stm32f031k6.c  stm32f031k6.cpp
